<resources>
    <string name="app_name">Medical Visits</string>
    <string name="newVisitButton">New visit</string>
    <string name="this_is_activity_four">This is activity four</string>

    <string name="Name1">Marina Kokoshkina</string>
    <string name="Name2">Jozefa Piłka</string>
    <string name="Name3">Mark Cocfield</string>
    <string name="Name4">Sara Marchewka</string>
    <string name="Name5">Ariel Hoffman</string>


    <string name="Addr1">Lublin, Szpital wojewódzki</string>
    <string name="Addr2">Lublin, Szpital wojewódzki</string>
    <string name="Addr3">Lublin, Szpital wojewódzki</string>
    <string name="Addr4">Lublin, Samodzielny Publiczny Szpital</string>
    <string name="Addr5">Lublin, Luxmed</string>


    <string name="Cab1">Gab. 105B</string>
    <string name="Cab2">Gab. 151</string>
    <string name="Cab3">Gab. 5/12</string>
    <string name="Cab4">Gab. 536</string>
    <string name="Cab5">Gab. 35</string>
    <string name="HomeTitle">Home</string>
    <string name="choose_time">Choose Time</string>
    <string name="choose_doctor">Choose place</string>
    <string name="home_button">Home</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>

    <string name="profil">Toast test</string>
    <string name="settings">Log In</string>
    <string name="dark_light_default">Change theme</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="don_t_have_an_account_sign_in">Don\'t have an account? Sign In</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signed">Sign in</string>
    <string name="already_have_an_account_login">Already have an account? Log In</string>
    <string name="successfully_signed_up">Successfully Signed Up</string>
    <string name="singed_up_failed">Signed Up Failed!</string>
    <string name="password_dont_match">Password and Confirm Password do not match</string>
    <string name="blank_data">Email and Password can\'t be blank</string>
    <string name="succ_log">Successfully Logged In</string>
    <string name="fail_log">Login failed</string>
    <string name="sign_up">Sign Up</string>
</resources>
