<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom|center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="top"
        android:layout_margin="15dp"
        android:backgroundTint="@color/bgColor"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="0dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCall"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/bgColor"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:stateListAnimator="@null"
                app:cornerRadius="0dp"
                app:icon="@drawable/ic_outline_call_24"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconTint="@color/textColor" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/choose_time"
                android:textColor="@color/textColor"
                android:textSize="24sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonOpenMenu"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/bgColor"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:stateListAnimator="@null"
                app:cornerRadius="0dp"
                app:icon="@drawable/ic_baseline_more_vert_24"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconTint="@color/textColor" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:paddingHorizontal="25dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/homeButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="bottom|right"
            android:layout_margin="15dp"
            android:backgroundTint="@color/bgColor"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:paddingHorizontal="30dp"
            android:paddingVertical="15dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/main"
            android:textSize="18sp"
            app:cornerRadius="15dp"
            app:elevation="100dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="bottom|right"
            android:layout_margin="15dp"
            android:backgroundTint="@color/main"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:paddingHorizontal="30dp"
            android:paddingVertical="15dp"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            app:cornerRadius="15dp"
            app:elevation="100dp"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>



